<resources>
    <string name="app_name">BattleShip</string>

    <!-- Hud -->
    <string name="player_name">Player Name</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="fleet">Fleet</string>

    <!-- MainMenuFragment -->
    <string name="single_player">Single Player</string>
    <string name="local_game">1vs1</string>
    <string name="online">Online</string>

    <!-- FleetFregment -->
    <string name="saveFleet">SAVE FLEET</string>
    <string name="change_level">SCENARIO</string>


    <!--Settings menu-->
    <string name="backgroundMusic" translatable="false">Background Music</string>
    <string name="sound_effects" translatable="false">Sound Effects</string>
    <string name="select_language">Select Language</string>
    <string name="choose_language">Choose Language</string>
    <string name="english">English</string>
    <string name="italian">Italian</string>
    <string name="select_flag">Select Flag</string>
    <string name="choose_flag">Choose Flag</string>
    <string name="usa">USA</string>
    <string name="italy">Italy</string>
    <string name="australia">Australia</string>
    <string name="brazil">Brazil</string>
    <string name="about">About</string>

    <!-- ScenarioSelection Activity -->
    <string name="russian">Russian</string>
    <string name="classic">Classic</string>
    <string name="standard">Standard</string>

    <!-- PreMatch Fragment -->
    <string name="start_match">Start</string>
    <string name="time_to_set_fleet">Time Remaining</string>

    <!-- Match Fragment -->
    <string name="turn_of">TURN OF:</string>

    <!-- Shared Preference keys -->
    <string name="configuration_preference_key" translatable="false">configuration preference</string>
    <string name="background_music_key" translatable="false">background_music_key</string>
    <string name="animation_sound_key" translatable="false">animation sound</string>
    <string name="language_key" translatable="false">language_key</string>
    <string name="flag_key" translatable="false">flag_key</string>

    <!-- Debugging strings -->
    <string name="launch_error">Initialization data failed</string>
    <string name="popup_text" translatable="false">This is a sample</string>
    <string name="debugging" translatable="false">debugging</string>


    <string name="winner">PLayer 1 win</string>
    <string name="win">Win!!!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="level_key">level key</string>
    <string name="game_mode_key">game mode key</string>


</resources>