<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_border_for_popup"
    >

    <TextView
        android:id="@+id/language_popup_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_language"
        android:gravity="center_horizontal"
        android:textSize="30dp"
        android:layout_margin="20dp"/>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <RadioButton
            android:id="@+id/english_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/english"
            android:textSize="20dp"
            android:gravity="left"
            android:layout_weight="1"
            android:checked="true"/>


        <RadioButton
            android:id="@+id/italian_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/italian"
            android:textSize="20dp"
            android:gravity="left"
            android:layout_weight="1"/>



    </RadioGroup>
</LinearLayout>